# slapquant

./: .gitignore  LICENSE  README.md  pyproject.toml
src/slapquant/: _utils.py  assign.py  bwamem.py  cli.py  slapquant.py  slapspan.py  slapstats.py
src/slapquant/__assets__/: allmatches.awk  filtering.awk  softclipped.awk  util.awk
