[project]
name = "slapquant"
version = "0.0.1"
description = "Find splice leader acceptor sites and polyadenylation sites from RNASeq reads"
dependencies = [
    "geffa @ git+https://github.com/ulido/geffa.git@0.1.0",
    "tqdm",
]
requires-python = ">= 3.10"

[project.scripts]
slapquant = "slapquant.cli:slapquant_main"
slapassign = "slapquant.cli:slapassign_main"
slaputrs = "slapquant.cli:slaputrs_main"
slapidentify = "slapquant.cli:slapidentify_main"
slapspan = "slapquant.cli:slapspan_main"

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
